ci/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: app-service
spec:
  rules:
  - http:
      paths:
      - path: /fastapi
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            port:
              number: 80
